# thala

./: .gitignore  CLAUDE.md  DEEP_LINKING.md  DOKPLOY.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
backend/alembic/: README  env.py
backend/src/thala_backend/: main.py
backend/src/thala_backend/api/: deps.py
backend/src/thala_backend/api/routes/: __init__.py  admin.py  archive.py  auth.py  community.py  events.py  feedback.py  messages.py  music.py  search.py  (+3 more)
backend/src/thala_backend/core/: config.py  security.py
backend/src/thala_backend/db/: base.py
backend/src/thala_backend/models/: __init__.py  archive.py  content.py  event.py  feedback.py  media.py  message.py  user.py
backend/src/thala_backend/schemas/: __init__.py  archive.py  auth.py  community.py  content.py  event.py  feedback.py  message.py  music.py  user.py  video.py
backend/src/thala_backend/services/: __init__.py  auth_service.py  email_service.py  google_oauth.py  search_service.py  storage_service.py
backend/src/thela_backend/: main.py
backend/src/thela_backend/core/: config.py
backend/src/thela_backend/db/: init_db.py  session.py
backend/src/thela_backend/models/: __init__.py  community.py  media.py  message.py
backend/src/thela_backend/schemas/: __init__.py  archive.py  community.py  content.py  event.py  message.py  music.py  user.py  video.py
backend/src/thela_backend/services/: __init__.py  auth_service.py  search_service.py  storage_service.py
(+306 files in other folders)
